--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <img src="../../assets/images/logo.svg" alt="Favorite medium logo" />
         <h3>Login</h3>
     </div>
-    <div class="form-container">
+    <!-- <div class="form-container">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <mat-form-field class="form-group">
                 <input type="email" matInput class="form-control" formControlName="user" placeholder="Enter username">
@@ -23,5 +23,7 @@
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-    </div>
+    </div> -->
+
+    <button class="btn btn-primary" (click)="auth.loginWithRedirect()">Log in</button>
 </div>
